@@ -61,4 +61,9 @@
         directory="kss"
         />
 
+    <browser:resourceDirectory
+        name="tinymce.stylesheets"
+        directory="stylesheets"
+        />
+
 </configure>
