@@ -1,0 +1,33 @@
+.documentContent ul.listTypeDisc {
+	list-style-type: disc;
+	list-style-image: none;
+}
+.documentContent ul.listTypeSquare {
+	list-style-type: square;
+	list-style-image: none;
+}
+.documentContent ul.listTypeCircle {
+	list-style-type: circle;
+	list-style-image: none;
+}
+.documentContent ol.listTypeDecimal {
+	list-style-type: decimal;
+	list-style-image: none;
+}
+.documentContent ol.listTypeLowerAlpha {
+	list-style-type: lower-alpha;
+	list-style-image: none;
+}
+.documentContent ol.listTypeUpperAlpha {
+	list-style-type: upper-alpha;
+	list-style-image: none;
+}
+.documentContent ol.listTypeLowerRoman {
+	list-style-type: lower-roman;
+	list-style-image: none;
+}
+.documentContent ol.listTypeUpperRoman {
+	list-style-type: upper-roman;
+	list-style-image: none;
+}
+
