@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1.1rc6</version>
+  <version>1.1rc9</version>
 </metadata>
