@@ -141,19 +141,6 @@ function TinyMCEConfig(id) {
         // Add defaults
         h['Text'].push('{ title: "Normal paragraph", tag: "p", className: " ", type: "Text" }');
 
-        h['Lists'].push('{ title: "Disc", tag: "ul", className: "", listType: "disc", type: "Lists" }');
-        h['Lists'].push('{ title: "Square", tag: "ul", className: "", listType: "square", type: "Lists" }');
-        h['Lists'].push('{ title: "Circle", tag: "ul", className: "", listType: "circle", type: "Lists" }');
-
-        h['Lists'].push('{ title: "Numbers", tag: "ol", className: "", listType: "1", type: "Lists" }');
-        h['Lists'].push('{ title: "Lower Alpha", tag: "ol", className: "", listType: "a", type: "Lists" }');
-        h['Lists'].push('{ title: "Upper Alpha", tag: "ol", className: "", listType: "A", type: "Lists" }');
-        h['Lists'].push('{ title: "Lower Roman", tag: "ol", className: "", listType: "i", type: "Lists" }');
-        h['Lists'].push('{ title: "Upper Roman", tag: "ol", className: "", listType: "I", type: "Lists" }');
-
-        h['Lists'].push('{ title: "Definition term", tag: "dt", className: "", listType: "", type: "Lists" }');
-        h['Lists'].push('{ title: "Definition description", tag: "dd", className: "", listType: "", type: "Lists" }');
-
         for (var i = 0; i < this.widget_config.styles.length; i++) {
             e = this.widget_config.styles[i].split('|');
             if (e.length <= 2) {
@@ -173,6 +160,10 @@ function TinyMCEConfig(id) {
                     break;
                 case 'ul':
                 case 'ol':
+                case 'li':
+                case 'dt':
+                case 'dd':
+                case 'dl':
                     styletype = "Lists";
                     break;
                 default:
