@@ -5,6 +5,9 @@ HISTORY
 1.1rc9 (Unreleased)
 -------------------
 
+- Changed list style to use classes (merge from xhtml-strict branche).
+  [robgietema]
+
 - Added scope option to table cell dialog (merge from xhtml-strict branche).
   [robgietema]
 
